Fix column stretching & add tertiary-danger button styling

--- a/frontend/src/ui-components/stylesheets/ff-components.scss
+++ b/frontend/src/ui-components/stylesheets/ff-components.scss
@@ -146,6 +146,13 @@
       color: $ff-white;
     }
   }
+  &--tertiary-danger {
+    color: $ff-color--danger;
+    &:hover {
+      background-color: $ff-color--danger--dark;
+      color: $ff-white;
+    }
+  }
 
   &.ff-btn-small {
     .ff-btn--icon,
